--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "js-base64": "^3.7.7",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
+    "moment-timezone": "^0.6.0",
     "mongoose": "^8.9.5",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.16",
